2006-04-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/filechooser.py (ProxyFileChooserButton.__init__): 
	Immitate PyGTK implementation argument wise

	* kiwi/ui/test/common.py:
	* kiwi/ui/test/listener.py:
	* kiwi/ui/test/main.py:
	Add optional support for emission hook.

	* README (Kiwi): 
	Mention that PyGObject 2.10.0 is recommended for the UI test
	
2006-04-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/entry.py (ProxyEntry.do_changed): Merge the
	the do_changed methods.

	* kiwi/environ.py (Environment.find_resource): Make sure it's a file

2006-04-26  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/dateentry.py: Fix DateEntry calendar popup, so it hides
	correctly. Fixes #2545

2006-04-26  Johan Dahlin  <johan@gnome.org>

	* kiwi/dist.py (_VariableExtender.__init__): When prefix is not
	set, use sys.prefix instead.

2006-04-25  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* tests/test_ObjectList.py: Add tests for list of RadioButtons

2006-04-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/entry.py (KiwiEntry.prefill): Fix exceptions,
	fixes #2535 (Patrik O'Brien)

=== 1.9.8 ===
2006-04-25  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

2006-04-25  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/objectlist.py (Column.as_string): Use a slightly
	different logic to convert to a string, fixes boolean radio
	columns

2006-04-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/environ.py: Add support for .gz and .bz2 compressed
	glade files, supported by recent gazpacho versions.
	Also check in the current directory when everything else
	fails. Based on patch by Sidnei da Silva, fixes #2409

2006-04-24  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/objectlist.py: fixing when data is None in as_string
	* tests/test_ObjectList.py: a test case when data is None

2006-04-24  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/main.py: